# docs/swagger.yaml
@@ -1,5 +1,20 @@
 basePath: /
 definitions:
+  api.InitUserRegistrationReq:
+    properties:
+      ifc_id:
+        type: string
+    type: object
+  dtos.APIResponse:
+    properties:
+      data: {}
+      message:
+        type: string
+      response_time:
+        type: string
+      status:
+        type: string
+    type: object
   dtos.UserRegisterSwaggerResponse:
     properties:
       data:
@@ -61,7 +76,52 @@ paths:
             $ref: '#/definitions/dtos.UserRegisterSwaggerResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/dtos.UserRegisterSwaggerResponse'
       summary: Register a new user
+      tags:
+      - Users
+  /api/v1/user/register/init:
+    post:
+      consumes:
+      - application/json
+      description: Initiates the user registration process given an IF Community ID
+        (IFC ID).
+      parameters:
+      - description: Discord ID
+        in: header
+        name: X-Discord-Id
+        required: true
+        type: string
+      - default: "123456789"
+        description: Discord Server ID
+        in: header
+        name: X-Server-Id
+        required: true
+        type: string
+      - description: API KEY
+        in: header
+        name: X-API-Key
+        required: true
+        type: string
+      - description: IFC ID Payload
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/api.InitUserRegistrationReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dtos.APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dtos.APIResponse'
+      summary: Initiate user registration
       tags:
       - Users
   /healthCheck:
