# internal/routes/router.go
@@ -1,10 +1,11 @@
 package routes
 
 import (
-	"infinite-experiment/infinite-experiment-backend/internal/api"
-	"infinite-experiment/infinite-experiment-backend/internal/db"
-	"infinite-experiment/infinite-experiment-backend/internal/db/repositories"
-	"infinite-experiment/infinite-experiment-backend/internal/services"
+	"infinite-experiment/politburo/internal/api"
+	"infinite-experiment/politburo/internal/db"
+	"infinite-experiment/politburo/internal/db/repositories"
+	"infinite-experiment/politburo/internal/middleware"
+	"infinite-experiment/politburo/internal/services"
 	"net/http"
 	"time"
 
@@ -20,8 +21,14 @@ func RegisterRoutes(upSince time.Time) http.Handler {
 	// r.Use(middleware.RateLimitMiddleware)
 
 	userRepo := repositories.NewUserRepository(db.DB)
+	cacheService := services.NewCacheService(60000, 600)
+	liveApiService := services.NewLiveAPIService()
+
+	userRegistationService := services.NewRegistrationService(liveApiService, *cacheService, *userRepo)
 	// userService := services.NewUserService(userRepo)
 	api.SetUserService(services.NewUserService(userRepo))
+
+	r.Use(middleware.AuthMiddleware(userRepo))
 
 	r.HandleFunc("/healthCheck", api.HealthCheckHandler(db.DB, upSince)).Methods("GET")
 
@@ -29,6 +36,7 @@ func RegisterRoutes(upSince time.Time) http.Handler {
 
 	apiV1 := r.PathPrefix("/api/v1").Subrouter()
 	apiV1.HandleFunc("/user/register", api.RegisterUserHandler).Methods("POST")
+	apiV1.HandleFunc("/user/register/init", api.InitUserRegistrationHandler(userRegistationService)).Methods("POST")
 
 	return r
 
